added empirical eval intro

--- a/working_doc.tex
+++ b/working_doc.tex
@@ -296,12 +296,13 @@ For large data sets, which cannot be fully loaded into the memory, FKM algorithm
 disk for every iteration, thus increasing the input/output complexity $O(ndi)$.
 
 \section{Empirical Evaluation}
-TALK ABOUT OUR TESTING METHOD HERE
+While the point of this endeavor was not to compare the agorithms against each other in regards as to which is best, a nearly insurmountable task as every spatial clustering algorithm has its weaknesses, evaluating run times in a graphical manner does indeed show if expected growth rates are achieved. To ensure that the run times did not include any bias, we ran all tests on a benchmark system detailed below. This ensured that the differences between an i7 CPU and a Pentium III CPU would not skew the results. In addition, any code that was not directluy related to the clustering of points was kept from the time calculations. By using this proposed system, we feel that most possible contamination of results has been avoided.
 
 \subsection{Testing Environment}
 \begin{center}
 Intel Core i7 @ 2.3GHz per core\\*
-16GB DDR3 @ 1600MHz
+16GB DDR3 @ 1600MHz\\*
+Python 2.7.3
 \end{center}
 
 \subsection{Results}
@@ -402,8 +403,76 @@ Intel Core i7 @ 2.3GHz per core\\*
 \end{center}
 
 \section{Discussion and Conclusion}
+Stuff here about what we learned, etc.Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
+Stuff here about what we learned, etc.
 Stuff here about what we learned, etc.
 
+\newpage
 \begin{thebibliography}{1}
 
 \bibitem{survey} R. Xu, D. Wunsch, ``Survey of Clustering Algorithms'', \emph{IEEE Transactions on Neural Networks}, vol. 16, no. 3, May, 2005, available at 
