fixed Fuzzy K-Means in table

--- a/working_doc.tex
+++ b/working_doc.tex
@@ -312,7 +312,7 @@ Python 2.7.3
 \caption{Comparison of Algorithm runtimes, in seconds} \label{Table1Label}
 \begin{tabular}{|c|c|c|c|}
  \hline
- Number of data points & BIRCH & DBSCAN& Fuzzy K-means \\
+ Number of data points & BIRCH & DBSCAN& Fuzzy K-Means \\
  \hline
  150,000 & 25.030436 & 75 & 155.195909\\
  \hline
