changed labels on graph

--- a/working_doc.tex
+++ b/working_doc.tex
@@ -355,8 +355,8 @@ Python 2.7.3
 \begin{axis}[
     height=9cm,
     width=9cm,
-    xlabel={seconds},
-    ylabel={data points in thousands},
+    xlabel={data points in thousands},
+    ylabel={seconds},
     grid=major,
   ]
   \addplot coordinates {
